# streaming-agents

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  Makefile  PHASE_1_COMPLETE.md  README.md  Taskfile.yml  biome.json  docker-compose.local.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-payload.json  tsconfig.base.json
.claude/: README.md
.claude/hydration/: api-contracts.md  architecture.md  context.md  runbooks.md
.claude/instructions/: 000-repo-standards.md  010-terraform-standards.md  020-nestjs-standards.md  030-python-standards.md  040-event-schemas.md  050-observability.md
.claude/skills/: README.md
.claude/skills/aideas-article-builder/: SKILL.md
.claude/skills/demo-narrative/: SKILL.md
.claude/skills/docs-spine-sync/: SKILL.md
.claude/skills/precommit-secrets/: SKILL.md
.claude/skills/repo-toolchain/: SKILL.md
.claude/skills/terraform-localstack/: SKILL.md
.claude/skills/workspace-healthcheck/: SKILL.md
.github/workflows/: README.md  lambda-build.yml  terraform-deploy.yml
.kiro/: README.md
.kiro/agents/: kinesis-governance.md  lambda-patterns.md  schema-steward.md  telemetry-steward.md
.kiro/skills/: README.md  aideas-article-builder  demo-narrative  docs-spine-sync  precommit-secrets  repo-toolchain  terraform-localstack  workspace-healthcheck
apps/api/dashboard-api/: Dockerfile  package.json
apps/lambdas/actions-agent/: package.json  tsconfig.json
docs/00-overview/: demo-checklist.md  demo-script.md  mvp-scope.md  project-brief.md
docs/01-architecture/: agents.md  aws-architecture.md  localstack-architecture.md  system-context.md
docs/02-domain/: evidence-and-explainability.md  history-model.md  incidents.md  reachy-telemetry-mapping.md  reasoning-capsule.md  risk-scoring.md  telemetry-model.md
docs/03-apis/: admin-api.md  conversation-api.md  dashboard-api.md  sse-and-streaming.md
docs/04-infra/: aws-sandbox.md  cicd-deployment.md  cost-and-teardown.md  localstack.md  networking.md  terraform-layout.md
docs/05-dev/: getting-started.md  local-dev.md  observability.md  precommit.md  reachy-mini-sdk-reference.md  testing.md  troubleshooting.md
docs/06-security/: iam-notes.md  secrets-management.md  threat-model-lite.md
docs/07-article/: builder-center-article.draft_v1.md  builder-center-article.md  cover-image-notes.md  demo-assets.md
docs/ai/: context.md  roles.md  tasks.md
docs/rmi/: README.md  reachy-openapi.json
docs/runbooks/: LOCALSTACK_RESTART_GUIDE.md
infra/: OBSERVABILITY.md  README.md
infra/grafana/: README.md
python/: README.md  pyproject.toml
python/services/batch-evaluator/: README.md  pyproject.toml
python/services/batch-evaluator/src/batch_evaluator/: __init__.py
python/services/diagnosis-agent/: README.md  pyproject.toml
python/services/diagnosis-agent/src/diagnosis_agent/: __init__.py
python/services/reachy-exporter/: README.md  pyproject.toml
python/services/reachy-exporter/src/reachy_exporter/: __init__.py  __main__.py  client.py  config.py  imu.py  main.py  publisher.py
python/services/reachy-exporter/tests/: test_client.py  test_config.py  test_imu.py  test_main.py  test_publisher.py
python/services/reachy-voice/: pyproject.toml
python/services/reachy-voice/src/reachy_voice/: __init__.py  __main__.py  audio_capture.py  audio_playback.py  config.py  feedback.py  lex_client.py  loop.py  main.py  session.py
python/services/reachy-voice/tests/: test_audio_capture.py  test_config.py  test_feedback.py  test_lex_client.py  test_session.py
python/src/streaming_agents/: __init__.py
tools/: bundle-lambda.ts  import-dashboard.sh  setup-grafana.sh  sim-risk.ts  validate-observability.sh
web/dashboard/: Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+238 files in other folders)
