[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streaming-agents-python"
version = "0.1.0"
description = "Python workspace for streaming-agents"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = ["ruff>=0.9.6", "streaming-agents-core"]

[tool.uv.sources]
streaming-agents-core = { workspace = true }

# Workspace root — src-layout so hatchling resolves cleanly.
[tool.hatch.build.targets.wheel]
packages = ["src/streaming_agents"]

[tool.uv.workspace]
members = [
  "packages/*",
  "services/*",
]

# ── Ruff ─────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["streaming_agents_core", "llm_providers"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
