[project]
name = "diagnosis-agent"
version = "0.1.0"
description = "Python LLM/explainability agent for diagnosis"
requires-python = ">=3.12"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diagnosis_agent"]
