[project]
name = "reachy-voice"
version = "0.1.0"
description = "Voice terminal for Reachy-Mini: talk to R-17 via Amazon Lex"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "pygame>=2.5",
    "httpx>=0.27",
]

[dependency-groups]
dev = ["pytest>=9.0"]

[project.scripts]
reachy-voice = "reachy_voice.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reachy_voice"]
