[project]
name = "reachy-voice"
version = "0.1.0"
description = "Voice terminal for Reachy-Mini: talk to R-17 via Amazon Lex"
keywords = ["reachy-mini-app"]
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35",
    "numpy>=1.26",
    "reachy-mini>=1.5.0",
]

[project.optional-dependencies]
laptop = ["sounddevice>=0.5", "pygame>=2.5"]

[dependency-groups]
dev = ["pytest>=9.0"]

[project.scripts]
reachy-voice = "reachy_voice.main:cli"

[project.entry-points."reachy_mini_apps"]
reachy_voice = "reachy_voice.main:ReachyVoice"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reachy_voice"]
